k8s/istio-ingress/xlb-httproute.yaml
# HTTP -> HTTPS redirect. See https://gateway-api.sigs.k8s.io/guides/http-redirect-rewrite/#http-to-https-redirects
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: edge-http-filter-redirect
  namespace: istio-ingress
spec:
  parentRefs:
  - name: xlb-gateway
    namespace: istio-ingress
    sectionName: edge-http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
---
# Route traffic from edge to mesh
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: edge2mesh 
  namespace: istio-ingress
  labels:
    gateway: xlb-gateway
spec:
  parentRefs:
  - name: xlb-gateway
    namespace: istio-ingress
    sectionName: edge-https
  rules:
    - backendRefs:
      - name: istio-ingressgateway
        port: 8443
